--- a/templates/first_app/templatePage.html
+++ b/templates/first_app/templatePage.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>
-        This is the index.html file
+        This is the templatePage.html file
     </h1>
     {{ insert_me }}
 </body>
