--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>MTV INDEX</title>
     <link rel="stylesheet" href="{% static 'css/temp.css' %}" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
@@ -28,6 +29,15 @@
         <h3>NO DATA FOUND</h3>
 
         {% endif %}
+    </div>
+    <br><br>
+    <div class='container'>
+        <h3>Here are the indexes</h3>
+        <a href="firstApp/" class="btn btn-primary">FirstApp</a>
+        <a href="firstApp/image" class="btn btn-primary">Image</a>
+        <a href="firstApp/template" class="btn btn-primary">Template Page</a>
+        <a href="admin/" class="btn btn-primary">Admin</a>
+        <a href="formPage/" class="btn btn-primary">Form Page</a>
     </div>
 </body>
 
