Form registration added

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,21 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a class="navbar-brand" href="firstApp/">FirstApp</a></li>
+                <li><a class="navbar-brand" href="firstApp/image">Image</a></li>
+                <li><a class="navbar-brand" href="firstApp/template">Template</a></li>
+                <li><a class="navbar-brand" href="formPage/">Form</a></li>
+                <li><a class="navbar-brand" href="topicAdd/">Topic Add</a></li>
+                <li><a class="navbar-brand" href="userapp/">User App</a></li>
+
+
+                <li><a class="navbar-brand" href="admin/">Admin</a></li>
+            </ul>
+        </div>
+    </nav>
     <h1>This is the index page</h1>
     <h2>Here is the access record table : </h2>
 
@@ -48,20 +63,7 @@
         <h3>NO DATA FOUND</h3>
 
         {% endif %}
-    </div>
-    <br><br>
-
-
-    <div class='container'>
-        <h3>Here are the indexes</h3>
-        <a href="firstApp/" class="btn btn-primary">FirstApp</a>
-        <a href="firstApp/image" class="btn btn-primary">Image</a>
-        <a href="firstApp/template" class="btn btn-primary">Template Page</a>
-        <a href="admin/" class="btn btn-primary">Admin</a>
-        <a href="formPage/" class="btn btn-primary">Form Page</a>
-        <a href="topicAdd/" class="btn btn-primary">Topic Add</a>
-    </div>
-    <br><br>
+        <br><br>
 
 </body>
 
